// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display just parts when supplier products not required 1`] = `
<div
  className="grid-container"
>
  <div
    className="grid"
    key="partBlock"
  >
    <PartDisplayGridHeaders
      className=""
      includeActions={false}
      lockFirstColumn={false}
      showErrors={false}
      showSupplierProducts={false}
    />
    <div
      className="grid-row"
      key="partRow11"
    >
      <div
        className="grid-item "
        key="section_11"
        style={
          Object {
            "gridRow": "span 1",
          }
        }
      >
        section 1 name
      </div>
      <PartViewRow
        brands={
          Array [
            Object {
              "brand_name": "brand 1",
              "id": 1,
            },
            Object {
              "brand_name": "brand 2",
              "id": 2,
              "supplier": Array [],
              "supplier_names": Array [],
            },
            Object {
              "brand_name": "brand 3",
              "id": 3,
              "supplier": Array [
                1,
              ],
              "supplier_names": Array [
                "supplier 1",
              ],
            },
            Object {
              "brand_name": "brand 4",
              "delete": true,
              "id": 4,
            },
            Object {
              "brand_name": "brand 5",
              "changed": true,
              "id": 5,
              "supplier": Array [
                1,
                3,
              ],
              "supplier_names": Array [
                "supplier 1",
                "supplier 3",
              ],
            },
            Object {
              "brand_name": "brand new",
              "changed": true,
              "dummyKey": "123ABC",
            },
            Object {
              "brand_name": "brand new 2",
              "changed": true,
              "dummyKey": "new",
            },
          ]
        }
        key="partViewRow11"
        part={
          Object {
            "id": 11,
            "partType": 1,
          }
        }
        sections={
          Array [
            Object {
              "id": 1,
              "name": "section 1 name",
              "partTypes": Array [
                Object {
                  "id": 1,
                },
                Object {
                  "id": 3,
                },
              ],
            },
            Object {
              "id": 2,
              "name": "Groupset",
              "partTypes": Array [
                Object {
                  "id": 9,
                },
                Object {
                  "id": 12,
                },
                Object {
                  "id": 14,
                },
              ],
            },
            Object {
              "id": 3,
              "name": "section 3 name",
              "partTypes": Array [
                Object {
                  "id": 171,
                },
              ],
            },
          ]
        }
        supplierProducts={Array []}
      />
    </div>
    <div
      className="grid-row"
      key="partRow13"
    >
      <div
        className="grid-item "
        key="section_13"
        style={
          Object {
            "gridRow": "span 1",
          }
        }
      />
      <PartViewRow
        brands={
          Array [
            Object {
              "brand_name": "brand 1",
              "id": 1,
            },
            Object {
              "brand_name": "brand 2",
              "id": 2,
              "supplier": Array [],
              "supplier_names": Array [],
            },
            Object {
              "brand_name": "brand 3",
              "id": 3,
              "supplier": Array [
                1,
              ],
              "supplier_names": Array [
                "supplier 1",
              ],
            },
            Object {
              "brand_name": "brand 4",
              "delete": true,
              "id": 4,
            },
            Object {
              "brand_name": "brand 5",
              "changed": true,
              "id": 5,
              "supplier": Array [
                1,
                3,
              ],
              "supplier_names": Array [
                "supplier 1",
                "supplier 3",
              ],
            },
            Object {
              "brand_name": "brand new",
              "changed": true,
              "dummyKey": "123ABC",
            },
            Object {
              "brand_name": "brand new 2",
              "changed": true,
              "dummyKey": "new",
            },
          ]
        }
        key="partViewRow13"
        part={
          Object {
            "id": 13,
            "partType": 3,
          }
        }
        sections={
          Array [
            Object {
              "id": 1,
              "name": "section 1 name",
              "partTypes": Array [
                Object {
                  "id": 1,
                },
                Object {
                  "id": 3,
                },
              ],
            },
            Object {
              "id": 2,
              "name": "Groupset",
              "partTypes": Array [
                Object {
                  "id": 9,
                },
                Object {
                  "id": 12,
                },
                Object {
                  "id": 14,
                },
              ],
            },
            Object {
              "id": 3,
              "name": "section 3 name",
              "partTypes": Array [
                Object {
                  "id": 171,
                },
              ],
            },
          ]
        }
        supplierProducts={Array []}
      />
    </div>
    <div
      className="grid-row"
      key="partRow29"
    >
      <div
        className="grid-item "
        key="section_29"
        style={
          Object {
            "gridRow": "span 1",
          }
        }
      >
        Groupset
      </div>
      <PartViewRow
        brands={
          Array [
            Object {
              "brand_name": "brand 1",
              "id": 1,
            },
            Object {
              "brand_name": "brand 2",
              "id": 2,
              "supplier": Array [],
              "supplier_names": Array [],
            },
            Object {
              "brand_name": "brand 3",
              "id": 3,
              "supplier": Array [
                1,
              ],
              "supplier_names": Array [
                "supplier 1",
              ],
            },
            Object {
              "brand_name": "brand 4",
              "delete": true,
              "id": 4,
            },
            Object {
              "brand_name": "brand 5",
              "changed": true,
              "id": 5,
              "supplier": Array [
                1,
                3,
              ],
              "supplier_names": Array [
                "supplier 1",
                "supplier 3",
              ],
            },
            Object {
              "brand_name": "brand new",
              "changed": true,
              "dummyKey": "123ABC",
            },
            Object {
              "brand_name": "brand new 2",
              "changed": true,
              "dummyKey": "new",
            },
          ]
        }
        key="partViewRow29"
        part={
          Object {
            "id": 29,
            "partType": 9,
          }
        }
        sections={
          Array [
            Object {
              "id": 1,
              "name": "section 1 name",
              "partTypes": Array [
                Object {
                  "id": 1,
                },
                Object {
                  "id": 3,
                },
              ],
            },
            Object {
              "id": 2,
              "name": "Groupset",
              "partTypes": Array [
                Object {
                  "id": 9,
                },
                Object {
                  "id": 12,
                },
                Object {
                  "id": 14,
                },
              ],
            },
            Object {
              "id": 3,
              "name": "section 3 name",
              "partTypes": Array [
                Object {
                  "id": 171,
                },
              ],
            },
          ]
        }
        supplierProducts={Array []}
      />
    </div>
    <div
      className="grid-row"
      key="partRow212"
    >
      <div
        className="grid-item "
        key="section_212"
        style={
          Object {
            "gridRow": "span 1",
          }
        }
      />
      <PartViewRow
        brands={
          Array [
            Object {
              "brand_name": "brand 1",
              "id": 1,
            },
            Object {
              "brand_name": "brand 2",
              "id": 2,
              "supplier": Array [],
              "supplier_names": Array [],
            },
            Object {
              "brand_name": "brand 3",
              "id": 3,
              "supplier": Array [
                1,
              ],
              "supplier_names": Array [
                "supplier 1",
              ],
            },
            Object {
              "brand_name": "brand 4",
              "delete": true,
              "id": 4,
            },
            Object {
              "brand_name": "brand 5",
              "changed": true,
              "id": 5,
              "supplier": Array [
                1,
                3,
              ],
              "supplier_names": Array [
                "supplier 1",
                "supplier 3",
              ],
            },
            Object {
              "brand_name": "brand new",
              "changed": true,
              "dummyKey": "123ABC",
            },
            Object {
              "brand_name": "brand new 2",
              "changed": true,
              "dummyKey": "new",
            },
          ]
        }
        key="partViewRow212"
        part={
          Object {
            "id": 212,
            "partType": 12,
          }
        }
        sections={
          Array [
            Object {
              "id": 1,
              "name": "section 1 name",
              "partTypes": Array [
                Object {
                  "id": 1,
                },
                Object {
                  "id": 3,
                },
              ],
            },
            Object {
              "id": 2,
              "name": "Groupset",
              "partTypes": Array [
                Object {
                  "id": 9,
                },
                Object {
                  "id": 12,
                },
                Object {
                  "id": 14,
                },
              ],
            },
            Object {
              "id": 3,
              "name": "section 3 name",
              "partTypes": Array [
                Object {
                  "id": 171,
                },
              ],
            },
          ]
        }
        supplierProducts={Array []}
      />
    </div>
    <div
      className="grid-row"
      key="partRow214"
    >
      <div
        className="grid-item "
        key="section_214"
        style={
          Object {
            "gridRow": "span 1",
          }
        }
      />
      <PartViewRow
        brands={
          Array [
            Object {
              "brand_name": "brand 1",
              "id": 1,
            },
            Object {
              "brand_name": "brand 2",
              "id": 2,
              "supplier": Array [],
              "supplier_names": Array [],
            },
            Object {
              "brand_name": "brand 3",
              "id": 3,
              "supplier": Array [
                1,
              ],
              "supplier_names": Array [
                "supplier 1",
              ],
            },
            Object {
              "brand_name": "brand 4",
              "delete": true,
              "id": 4,
            },
            Object {
              "brand_name": "brand 5",
              "changed": true,
              "id": 5,
              "supplier": Array [
                1,
                3,
              ],
              "supplier_names": Array [
                "supplier 1",
                "supplier 3",
              ],
            },
            Object {
              "brand_name": "brand new",
              "changed": true,
              "dummyKey": "123ABC",
            },
            Object {
              "brand_name": "brand new 2",
              "changed": true,
              "dummyKey": "new",
            },
          ]
        }
        key="partViewRow214"
        part={
          Object {
            "id": 214,
            "partType": 14,
          }
        }
        sections={
          Array [
            Object {
              "id": 1,
              "name": "section 1 name",
              "partTypes": Array [
                Object {
                  "id": 1,
                },
                Object {
                  "id": 3,
                },
              ],
            },
            Object {
              "id": 2,
              "name": "Groupset",
              "partTypes": Array [
                Object {
                  "id": 9,
                },
                Object {
                  "id": 12,
                },
                Object {
                  "id": 14,
                },
              ],
            },
            Object {
              "id": 3,
              "name": "section 3 name",
              "partTypes": Array [
                Object {
                  "id": 171,
                },
              ],
            },
          ]
        }
        supplierProducts={Array []}
      />
    </div>
    <div
      className="grid-row"
      key="partRow3171"
    >
      <div
        className="grid-item "
        key="section_3171"
        style={
          Object {
            "gridRow": "span 1",
          }
        }
      >
        section 3 name
      </div>
      <PartViewRow
        brands={
          Array [
            Object {
              "brand_name": "brand 1",
              "id": 1,
            },
            Object {
              "brand_name": "brand 2",
              "id": 2,
              "supplier": Array [],
              "supplier_names": Array [],
            },
            Object {
              "brand_name": "brand 3",
              "id": 3,
              "supplier": Array [
                1,
              ],
              "supplier_names": Array [
                "supplier 1",
              ],
            },
            Object {
              "brand_name": "brand 4",
              "delete": true,
              "id": 4,
            },
            Object {
              "brand_name": "brand 5",
              "changed": true,
              "id": 5,
              "supplier": Array [
                1,
                3,
              ],
              "supplier_names": Array [
                "supplier 1",
                "supplier 3",
              ],
            },
            Object {
              "brand_name": "brand new",
              "changed": true,
              "dummyKey": "123ABC",
            },
            Object {
              "brand_name": "brand new 2",
              "changed": true,
              "dummyKey": "new",
            },
          ]
        }
        key="partViewRow3171"
        part={
          Object {
            "id": 3171,
            "partType": 171,
          }
        }
        sections={
          Array [
            Object {
              "id": 1,
              "name": "section 1 name",
              "partTypes": Array [
                Object {
                  "id": 1,
                },
                Object {
                  "id": 3,
                },
              ],
            },
            Object {
              "id": 2,
              "name": "Groupset",
              "partTypes": Array [
                Object {
                  "id": 9,
                },
                Object {
                  "id": 12,
                },
                Object {
                  "id": 14,
                },
              ],
            },
            Object {
              "id": 3,
              "name": "section 3 name",
              "partTypes": Array [
                Object {
                  "id": 171,
                },
              ],
            },
          ]
        }
        supplierProducts={Array []}
      />
    </div>
    )}
  </div>
</div>
`;

exports[`should display parts and supplier parts when supplier products are required 1`] = `
<div
  className="grid-container"
>
  <div
    className="grid"
    key="partBlock"
  >
    <PartDisplayGridHeaders
      className=""
      includeActions={false}
      lockFirstColumn={true}
      showErrors={false}
      showSupplierProducts={true}
    />
    <div
      className="grid-row"
      key="partRow11"
    >
      <div
        className="grid-item grid-item--fixed-left"
        key="section_11"
        style={
          Object {
            "gridRow": "span 1",
          }
        }
      >
        section 1 name
      </div>
      <PartViewRow
        brands={
          Array [
            Object {
              "brand_name": "brand 1",
              "id": 1,
            },
            Object {
              "brand_name": "brand 2",
              "id": 2,
              "supplier": Array [],
              "supplier_names": Array [],
            },
            Object {
              "brand_name": "brand 3",
              "id": 3,
              "supplier": Array [
                1,
              ],
              "supplier_names": Array [
                "supplier 1",
              ],
            },
            Object {
              "brand_name": "brand 4",
              "delete": true,
              "id": 4,
            },
            Object {
              "brand_name": "brand 5",
              "changed": true,
              "id": 5,
              "supplier": Array [
                1,
                3,
              ],
              "supplier_names": Array [
                "supplier 1",
                "supplier 3",
              ],
            },
            Object {
              "brand_name": "brand new",
              "changed": true,
              "dummyKey": "123ABC",
            },
            Object {
              "brand_name": "brand new 2",
              "changed": true,
              "dummyKey": "new",
            },
          ]
        }
        key="partViewRow11"
        part={
          Object {
            "id": 11,
            "partType": 1,
          }
        }
        sections={
          Array [
            Object {
              "id": 1,
              "name": "section 1 name",
              "partTypes": Array [
                Object {
                  "id": 1,
                },
                Object {
                  "id": 3,
                },
              ],
            },
            Object {
              "id": 2,
              "name": "Groupset",
              "partTypes": Array [
                Object {
                  "id": 9,
                },
                Object {
                  "id": 12,
                },
                Object {
                  "id": 14,
                },
              ],
            },
            Object {
              "id": 3,
              "name": "section 3 name",
              "partTypes": Array [
                Object {
                  "id": 171,
                },
              ],
            },
          ]
        }
        supplierProducts={Array []}
      />
      <SupplierProductViewRow
        key="supplierProductnew"
        lockFirstColumn={false}
        supplierProduct={Object {}}
        suppliers={
          Array [
            Object {
              "id": 12,
              "name": "supplier Name",
            },
            Object {
              "id": 22,
              "name": "supplier Name 2",
            },
          ]
        }
      />
    </div>
    <div
      className="grid-row"
      key="partRow13"
    >
      <div
        className="grid-item grid-item--fixed-left"
        key="section_13"
        style={
          Object {
            "gridRow": "span 1",
          }
        }
      />
      <PartViewRow
        brands={
          Array [
            Object {
              "brand_name": "brand 1",
              "id": 1,
            },
            Object {
              "brand_name": "brand 2",
              "id": 2,
              "supplier": Array [],
              "supplier_names": Array [],
            },
            Object {
              "brand_name": "brand 3",
              "id": 3,
              "supplier": Array [
                1,
              ],
              "supplier_names": Array [
                "supplier 1",
              ],
            },
            Object {
              "brand_name": "brand 4",
              "delete": true,
              "id": 4,
            },
            Object {
              "brand_name": "brand 5",
              "changed": true,
              "id": 5,
              "supplier": Array [
                1,
                3,
              ],
              "supplier_names": Array [
                "supplier 1",
                "supplier 3",
              ],
            },
            Object {
              "brand_name": "brand new",
              "changed": true,
              "dummyKey": "123ABC",
            },
            Object {
              "brand_name": "brand new 2",
              "changed": true,
              "dummyKey": "new",
            },
          ]
        }
        key="partViewRow13"
        part={
          Object {
            "id": 13,
            "partType": 3,
          }
        }
        sections={
          Array [
            Object {
              "id": 1,
              "name": "section 1 name",
              "partTypes": Array [
                Object {
                  "id": 1,
                },
                Object {
                  "id": 3,
                },
              ],
            },
            Object {
              "id": 2,
              "name": "Groupset",
              "partTypes": Array [
                Object {
                  "id": 9,
                },
                Object {
                  "id": 12,
                },
                Object {
                  "id": 14,
                },
              ],
            },
            Object {
              "id": 3,
              "name": "section 3 name",
              "partTypes": Array [
                Object {
                  "id": 171,
                },
              ],
            },
          ]
        }
        supplierProducts={
          Array [
            Object {
              "check_date": 2015-03-25T18:30:00.000Z,
              "club_price": 22.99,
              "fitted_price": 23.99,
              "id": 121,
              "part": 13,
              "product_code": "PC101",
              "rrp": 24.99,
              "supplier": 12,
              "ticket_price": 24.99,
              "trade_price": 11,
            },
          ]
        }
      />
      <SupplierProductViewRow
        key="supplierProduct121"
        lockFirstColumn={false}
        supplierProduct={
          Object {
            "check_date": 2015-03-25T18:30:00.000Z,
            "club_price": 22.99,
            "fitted_price": 23.99,
            "id": 121,
            "part": 13,
            "product_code": "PC101",
            "rrp": 24.99,
            "supplier": 12,
            "ticket_price": 24.99,
            "trade_price": 11,
          }
        }
        suppliers={
          Array [
            Object {
              "id": 12,
              "name": "supplier Name",
            },
            Object {
              "id": 22,
              "name": "supplier Name 2",
            },
          ]
        }
      />
    </div>
    <div
      className="grid-row"
      key="supplierProductRow121"
    >
      <SupplierProductViewRow
        key="supplierProduct121"
        lockFirstColumn={false}
        supplierProduct={
          Object {
            "check_date": 2015-03-25T18:30:00.000Z,
            "club_price": 22.99,
            "fitted_price": 23.99,
            "id": 121,
            "part": 13,
            "product_code": "PC101",
            "rrp": 24.99,
            "supplier": 12,
            "ticket_price": 24.99,
            "trade_price": 11,
          }
        }
        suppliers={
          Array [
            Object {
              "id": 12,
              "name": "supplier Name",
            },
            Object {
              "id": 22,
              "name": "supplier Name 2",
            },
          ]
        }
      />
    </div>
    <div
      className="grid-row"
      key="partRow29"
    >
      <div
        className="grid-item grid-item--fixed-left"
        key="section_29"
        style={
          Object {
            "gridRow": "span 1",
          }
        }
      >
        Groupset
      </div>
      <PartViewRow
        brands={
          Array [
            Object {
              "brand_name": "brand 1",
              "id": 1,
            },
            Object {
              "brand_name": "brand 2",
              "id": 2,
              "supplier": Array [],
              "supplier_names": Array [],
            },
            Object {
              "brand_name": "brand 3",
              "id": 3,
              "supplier": Array [
                1,
              ],
              "supplier_names": Array [
                "supplier 1",
              ],
            },
            Object {
              "brand_name": "brand 4",
              "delete": true,
              "id": 4,
            },
            Object {
              "brand_name": "brand 5",
              "changed": true,
              "id": 5,
              "supplier": Array [
                1,
                3,
              ],
              "supplier_names": Array [
                "supplier 1",
                "supplier 3",
              ],
            },
            Object {
              "brand_name": "brand new",
              "changed": true,
              "dummyKey": "123ABC",
            },
            Object {
              "brand_name": "brand new 2",
              "changed": true,
              "dummyKey": "new",
            },
          ]
        }
        key="partViewRow29"
        part={
          Object {
            "id": 29,
            "partType": 9,
          }
        }
        sections={
          Array [
            Object {
              "id": 1,
              "name": "section 1 name",
              "partTypes": Array [
                Object {
                  "id": 1,
                },
                Object {
                  "id": 3,
                },
              ],
            },
            Object {
              "id": 2,
              "name": "Groupset",
              "partTypes": Array [
                Object {
                  "id": 9,
                },
                Object {
                  "id": 12,
                },
                Object {
                  "id": 14,
                },
              ],
            },
            Object {
              "id": 3,
              "name": "section 3 name",
              "partTypes": Array [
                Object {
                  "id": 171,
                },
              ],
            },
          ]
        }
        supplierProducts={Array []}
      />
      <SupplierProductViewRow
        key="supplierProductnew"
        lockFirstColumn={false}
        supplierProduct={Object {}}
        suppliers={
          Array [
            Object {
              "id": 12,
              "name": "supplier Name",
            },
            Object {
              "id": 22,
              "name": "supplier Name 2",
            },
          ]
        }
      />
    </div>
    <div
      className="grid-row"
      key="partRow212"
    >
      <div
        className="grid-item grid-item--fixed-left"
        key="section_212"
        style={
          Object {
            "gridRow": "span 1",
          }
        }
      />
      <PartViewRow
        brands={
          Array [
            Object {
              "brand_name": "brand 1",
              "id": 1,
            },
            Object {
              "brand_name": "brand 2",
              "id": 2,
              "supplier": Array [],
              "supplier_names": Array [],
            },
            Object {
              "brand_name": "brand 3",
              "id": 3,
              "supplier": Array [
                1,
              ],
              "supplier_names": Array [
                "supplier 1",
              ],
            },
            Object {
              "brand_name": "brand 4",
              "delete": true,
              "id": 4,
            },
            Object {
              "brand_name": "brand 5",
              "changed": true,
              "id": 5,
              "supplier": Array [
                1,
                3,
              ],
              "supplier_names": Array [
                "supplier 1",
                "supplier 3",
              ],
            },
            Object {
              "brand_name": "brand new",
              "changed": true,
              "dummyKey": "123ABC",
            },
            Object {
              "brand_name": "brand new 2",
              "changed": true,
              "dummyKey": "new",
            },
          ]
        }
        key="partViewRow212"
        part={
          Object {
            "id": 212,
            "partType": 12,
          }
        }
        sections={
          Array [
            Object {
              "id": 1,
              "name": "section 1 name",
              "partTypes": Array [
                Object {
                  "id": 1,
                },
                Object {
                  "id": 3,
                },
              ],
            },
            Object {
              "id": 2,
              "name": "Groupset",
              "partTypes": Array [
                Object {
                  "id": 9,
                },
                Object {
                  "id": 12,
                },
                Object {
                  "id": 14,
                },
              ],
            },
            Object {
              "id": 3,
              "name": "section 3 name",
              "partTypes": Array [
                Object {
                  "id": 171,
                },
              ],
            },
          ]
        }
        supplierProducts={Array []}
      />
      <SupplierProductViewRow
        key="supplierProductnew"
        lockFirstColumn={false}
        supplierProduct={Object {}}
        suppliers={
          Array [
            Object {
              "id": 12,
              "name": "supplier Name",
            },
            Object {
              "id": 22,
              "name": "supplier Name 2",
            },
          ]
        }
      />
    </div>
    <div
      className="grid-row"
      key="partRow214"
    >
      <div
        className="grid-item grid-item--fixed-left"
        key="section_214"
        style={
          Object {
            "gridRow": "span 1",
          }
        }
      />
      <PartViewRow
        brands={
          Array [
            Object {
              "brand_name": "brand 1",
              "id": 1,
            },
            Object {
              "brand_name": "brand 2",
              "id": 2,
              "supplier": Array [],
              "supplier_names": Array [],
            },
            Object {
              "brand_name": "brand 3",
              "id": 3,
              "supplier": Array [
                1,
              ],
              "supplier_names": Array [
                "supplier 1",
              ],
            },
            Object {
              "brand_name": "brand 4",
              "delete": true,
              "id": 4,
            },
            Object {
              "brand_name": "brand 5",
              "changed": true,
              "id": 5,
              "supplier": Array [
                1,
                3,
              ],
              "supplier_names": Array [
                "supplier 1",
                "supplier 3",
              ],
            },
            Object {
              "brand_name": "brand new",
              "changed": true,
              "dummyKey": "123ABC",
            },
            Object {
              "brand_name": "brand new 2",
              "changed": true,
              "dummyKey": "new",
            },
          ]
        }
        key="partViewRow214"
        part={
          Object {
            "id": 214,
            "partType": 14,
          }
        }
        sections={
          Array [
            Object {
              "id": 1,
              "name": "section 1 name",
              "partTypes": Array [
                Object {
                  "id": 1,
                },
                Object {
                  "id": 3,
                },
              ],
            },
            Object {
              "id": 2,
              "name": "Groupset",
              "partTypes": Array [
                Object {
                  "id": 9,
                },
                Object {
                  "id": 12,
                },
                Object {
                  "id": 14,
                },
              ],
            },
            Object {
              "id": 3,
              "name": "section 3 name",
              "partTypes": Array [
                Object {
                  "id": 171,
                },
              ],
            },
          ]
        }
        supplierProducts={Array []}
      />
      <SupplierProductViewRow
        key="supplierProduct121"
        lockFirstColumn={false}
        supplierProduct={
          Object {
            "check_date": 2015-03-25T18:30:00.000Z,
            "club_price": 22.99,
            "fitted_price": 23.99,
            "id": 121,
            "part": 214,
            "product_code": "PC101",
            "rrp": 24.99,
            "supplier": 12,
            "ticket_price": 24.99,
            "trade_price": 11,
          }
        }
        suppliers={
          Array [
            Object {
              "id": 12,
              "name": "supplier Name",
            },
            Object {
              "id": 22,
              "name": "supplier Name 2",
            },
          ]
        }
      />
    </div>
    <div
      className="grid-row"
      key="partRow3171"
    >
      <div
        className="grid-item grid-item--fixed-left"
        key="section_3171"
        style={
          Object {
            "gridRow": "span 1",
          }
        }
      >
        section 3 name
      </div>
      <PartViewRow
        brands={
          Array [
            Object {
              "brand_name": "brand 1",
              "id": 1,
            },
            Object {
              "brand_name": "brand 2",
              "id": 2,
              "supplier": Array [],
              "supplier_names": Array [],
            },
            Object {
              "brand_name": "brand 3",
              "id": 3,
              "supplier": Array [
                1,
              ],
              "supplier_names": Array [
                "supplier 1",
              ],
            },
            Object {
              "brand_name": "brand 4",
              "delete": true,
              "id": 4,
            },
            Object {
              "brand_name": "brand 5",
              "changed": true,
              "id": 5,
              "supplier": Array [
                1,
                3,
              ],
              "supplier_names": Array [
                "supplier 1",
                "supplier 3",
              ],
            },
            Object {
              "brand_name": "brand new",
              "changed": true,
              "dummyKey": "123ABC",
            },
            Object {
              "brand_name": "brand new 2",
              "changed": true,
              "dummyKey": "new",
            },
          ]
        }
        key="partViewRow3171"
        part={
          Object {
            "id": 3171,
            "partType": 171,
          }
        }
        sections={
          Array [
            Object {
              "id": 1,
              "name": "section 1 name",
              "partTypes": Array [
                Object {
                  "id": 1,
                },
                Object {
                  "id": 3,
                },
              ],
            },
            Object {
              "id": 2,
              "name": "Groupset",
              "partTypes": Array [
                Object {
                  "id": 9,
                },
                Object {
                  "id": 12,
                },
                Object {
                  "id": 14,
                },
              ],
            },
            Object {
              "id": 3,
              "name": "section 3 name",
              "partTypes": Array [
                Object {
                  "id": 171,
                },
              ],
            },
          ]
        }
        supplierProducts={Array []}
      />
      <SupplierProductViewRow
        key="supplierProductnew"
        lockFirstColumn={false}
        supplierProduct={Object {}}
        suppliers={
          Array [
            Object {
              "id": 12,
              "name": "supplier Name",
            },
            Object {
              "id": 22,
              "name": "supplier Name 2",
            },
          ]
        }
      />
    </div>
    )}
  </div>
</div>
`;
